[package]
name = "eraym-rs-runner"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.17", features = ["macros"] }
bytes = "0.5.4"
structopt = "0.3.13"
warp = "0.2.2"
